trunk/Archive2/9c/50af125c8c06e1/output
main.cpp: In member function 'bool Scoreboard::checkCollision(unsigned int) const':
main.cpp:34:34: error: no match for 'operator[]' (operand types are 'const value_type {aka const std::map<unsigned int, std::bitset<32ul> >}' and 'int')
    common = mask & reg_table[wid][i];
                                  ^
main.cpp:34:34: note: candidates are:
In file included from /usr/local/include/c++/4.9.2/map:61:0,
                 from main.cpp:4:
/usr/local/include/c++/4.9.2/bits/stl_map.h:491:7: note: std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::operator[](const key_type&) [with _Key = unsigned int; _Tp = std::bitset<32ul>; _Compare = std::less<unsigned int>; _Alloc = std::allocator<std::pair<const unsigned int, std::bitset<32ul> > >; std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type = std::bitset<32ul>; std::map<_Key, _Tp, _Compare, _Alloc>::key_type = unsigned int] <near match>
       operator[](const key_type& __k)
       ^
/usr/local/include/c++/4.9.2/bits/stl_map.h:491:7: note:   no known conversion for implicit 'this' parameter from 'const value_type* {aka const std::map<unsigned int, std::bitset<32ul> >*}' to 'std::map<unsigned int, std::bitset<32ul> >*'
/usr/local/include/c++/4.9.2/bits/stl_map.h:511:7: note: std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::operator[](std::map<_Key, _Tp, _Compare, _Alloc>::key_type&&) [with _Key = unsigned int; _Tp = std::bitset<32ul>; _Compare = std::less<unsigned int>; _Alloc = std::allocator<std::pair<const unsigned int, std::bitset<32ul> > >; std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type = std::bitset<32ul>; std::map<_Key, _Tp, _Compare, _Alloc>::key_type = unsigned int] <near match>
       operator[](key_type&& __k)
       ^
/usr/local/include/c++/4.9.2/bits/stl_map.h:511:7: note:   no known conversion for implicit 'this' parameter from 'const value_type* {aka const std::map<unsigned int, std::bitset<32ul> >*}' to 'std::map<unsigned int, std::bitset<32ul> >*'
